<resources>
    <string name="app_name">MyItLesson</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="login_message">To login you must authorize</string>
    <string name="invalid_username">Invalid username</string>
    <string name="invalid_password">Password have to be lower than 8 symbols</string>
    <string name="incorrect_data">Incorrect data, Try again</string>
    <string name="logo">Logo</string>
    <string name="courses_item">Courses</string>
    <string name="users_item">Users</string>
    <string name="profile_item">My Profile</string>
    <string name="find_course_search_hint">Find Course</string>
    <string name="recommend_courses">Recommend</string>
    <string name="course_card_image">Course Card Image</string>
    <string name="user_card_image">User Card Image</string>
    <string name="title">Title</string>
    <string name="body">Body</string>
    <string name="add_course">ADD COURSE</string>
    <string name="notification_button">Notifications</string>
    <string name="profile_image">Profile Image</string>
    <string name="user_credentials">First Name Last Name</string>
    <string name="user_role">User Role</string>
    <string name="my_courses_title">My Courses</string>
    <string name="settings_button">Settings</string>
    <string name="settings">Settings</string>
    <string name="description">Description</string>
    <string name="close_notification">Close Notification</string>
    <string name="notifications">Notifications</string>
    <string name="course_info_page_title">Info</string>
    <string name="modules_page_title">Modules</string>
    <string name="connection_error">Can\'t connect to the server.</string>
    <string name="preference_file_key">ru.myitlesson.app.USER_CREDENTIALS</string>
    <string name="user_token_key">TOKEN</string>
    <string name="wait_message">Please wait ...</string>
    <string name="user_id_key">ID</string>
    <string name="open_course">Open Course</string>
    <string name="read">Read</string>
    <string name="set_type">Set Type</string>
    <string name="editor_title">Editor</string>
    <string name="course">Course</string>
    <string name="module">Module</string>
    <string name="lesson">Lesson</string>
    <string name="save">Save</string>
    <string name="view">View</string>
    <string name="new_subject">New</string>
    <string name="choice_course">Choice Course</string>
    <string name="saved">Saved</string>
    <string name="fragment_tag">fragment</string>
    <string name="remove">Remove</string>
    <string name="removed">Removed</string>
    <string name="choice_module">Choice Module</string>
</resources>