<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:gravity="center_horizontal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="end">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/notifications_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/notification_button"
            style="@style/Widget.Material3.Button.IconButton.Outlined"
            app:icon="@drawable/notifications"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/settings_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/settings_button"
            style="@style/Widget.Material3.Button.IconButton.Outlined"
            app:icon="@drawable/settings"/>
    </LinearLayout>


    <ru.myitlesson.app.widget.CircledImageView
        android:src="@drawable/user_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:strokeWidth="10"
        android:strokeColor="#000"/>

    <TextView
        style="@style/TextAppearance.MaterialComponents.Headline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_credentials"
        android:layout_marginTop="35dp"/>

    <TextView
        style="@style/TextAppearance.MaterialComponents.Subtitle1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_role"/>

    <TextView
        style="@style/TextAppearance.MaterialComponents.Headline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/my_courses_title"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/courses_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/bottom_navigation_height"/>

    <Button
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:text="@string/add_course"
        android:layout_marginBottom="@dimen/bottom_navigation_height"/>

</LinearLayout>