<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        android:gravity="center_horizontal"
        android:layout_gravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="end">

            <Button
                style="@style/Widget.App.IconButton"
                android:id="@+id/notifications_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/notifications"
                app:icon="@drawable/notifications"/>

            <Button
                style="@style/Widget.App.IconButton"
                android:id="@+id/settings_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/settings"
                app:icon="@drawable/settings"/>
        </LinearLayout>

        <ru.myitlesson.app.widget.CircledImageView
            android:src="@drawable/user_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:strokeWidth="10"
            android:strokeColor="#000"/>

        <TextView
            style="@style/TextAppearance.MaterialComponents.Headline4"
            android:id="@+id/username_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_credentials"
            android:layout_marginTop="35dp"/>

        <TextView
            style="@style/TextAppearance.MaterialComponents.Subtitle1"
            android:id="@+id/role_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_role"/>

    </LinearLayout>

</FrameLayout>
