<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/card_view_default_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/notification_title"
                style="@style/TextAppearance.MaterialComponents.Headline6"
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:text="@string/title"
                android:padding="5dp"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/close_notification_button"
                style="@style/Widget.Material3.Button.IconButton.Outlined"
                android:layout_width="48dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="300dp"
                android:contentDescription="@string/close_notification"
                app:icon="@drawable/close" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp">


            <TextView
                android:id="@+id/notification_description"
                style="@style/TextAppearance.MaterialComponents.Body1"
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:text="@string/description" />

        </LinearLayout>

    </LinearLayout>
</com.google.android.material.card.MaterialCardView>