<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:gravity="center">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/logo"
        android:src="@drawable/code"/>

    <TextView
        android:id="@+id/login_message_text_view"
        style="@style/TextAppearance.MaterialComponents.Headline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_message"
        android:layout_marginBottom="30dp"
        android:textAlignment="center"/>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.App.TextInputLayout"
        android:id="@+id/username_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minEms="20"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/username_input_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:inputType="text"
            android:maxLines="1"
            android:hint="@string/username_hint"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.App.TextInputLayout"
        android:id="@+id/password_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minEms="20"
        android:layout_marginTop="40dp"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_input_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:inputType="textPassword"
            android:maxLines="1"
            android:hint="@string/password_hint"/>

    </com.google.android.material.textfield.TextInputLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/ok_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:text="@android:string/ok"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@+id/ok_button"
            android:layout_marginEnd="15dp"
            android:text="@android:string/cancel"/>

    </RelativeLayout>

</LinearLayout>